# paradigm-terra

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  LINKS.md  Makefile  PARADIGM TERRA EXECUTION SPECIFICATION v1  README.md  SECURITY.md  SIMULATION_PREVIEW.md  index.html  manifest.json
.github/workflows/: ci.yml
cal/: README.md  package.json
cal-gas/: README.md  package.json
cal-gas-go/: errors.go  go.mod  parity_test.go  pricing.go  settle.go  units.go  util.go
cal-gas-rs/: Cargo.toml
cal-gas-rs/src/: errors.rs  lib.rs  pricing.rs  settle.rs  u256.rs  units.rs  util.rs
cal-gas-rs/tests/: parity.rs
cal-gas/bench/: gas-bench.mjs
cal-gas/fuzz/: driver.mjs  ts_harness.mjs
cal-gas/scripts/: generate-vectors.ts
cal-gas/src/: index.ts  pricing.ts  settle.ts  units.ts  util.ts
cal-gas/test/: gas.test.ts  golden-vectors.test.ts  multisig-gas.test.ts
cal-gas/vectors/: golden.json
cal-go/: errors.go  go.mod  hash.go  lifecycle.go  owner_envelope_test.go  parity_test.go  schema.go
cal-reducer/: README.md  package.json
cal-reducer-go/: apply.go  delta.go  errors.go  fold.go  go.mod  migrate.go  parity_test.go  state.go
cal-reducer-rs/: Cargo.toml
cal-reducer-rs/.cargo/: config.toml
cal-reducer-rs/src/: apply.rs  delta.rs  errors.rs  fold.rs  lib.rs  migrate.rs  state.rs  u256.rs
cal-reducer-rs/tests/: parity.rs
cal-reducer/fuzz/: driver.mjs  ts_harness.mjs
cal-reducer/scripts/: generate-vectors.ts
cal-reducer/src/: apply.ts  delta.ts  errors.ts  fold.ts  index.ts  migrate.ts  state.ts
cal-reducer/test/: apply.test.ts  golden-vectors.test.ts  multisig-registry.test.ts  roundtrip.test.ts
cal-reducer/vectors/: golden.json
cal-rs/: Cargo.toml
cal-rs/src/: errors.rs  hash.rs  lib.rs  lifecycle.rs  schema.rs
cal-rs/tests/: parity.rs
cal-validator-go/: go.mod  owner_sig.go  owner_sig_test.go  parity_test.go  trace.go  validate.go
cal/scripts/: generate-vectors.ts
cal/src/: errors.ts  events.ts  hash.ts  index.ts  lifecycle.ts  schema.ts
cal/test/: golden-vectors.test.ts  hash.test.ts  schema.test.ts
cal/vectors/: golden.json
canonical/: LICENSE  package-lock.json  package.json  tsconfig.test.json
canonical-go/: README.md  addresses.go  domains.go  errors.go  framing.go  go.mod  hash.go  integers.go  jcs.go  mcp.go  mcp_test.go  merkle.go  parity_test.go  strings.go  tick.go  tick_test.go  unicode_assigned.go
canonical-rs/: Cargo.toml  README.md
canonical-rs/src/: addresses.rs  domains.rs  errors.rs  framing.rs  hash.rs  integers.rs  jcs.rs  lib.rs  mcp.rs  merkle.rs  sha256.rs  strings.rs  unicode_assigned.rs
canonical-rs/tests/: mcp.rs  parity.rs
canonical/scripts/: generate-vectors.ts
canonical/src/: addresses.ts  domains.ts  errors.ts  framing.ts  hash.ts  index.ts  integers.ts  jcs.ts  mcp.ts  merkle.ts  strings.ts  unicodeAssigned.ts
canonical/test/: addresses.test.ts  framing.test.ts  golden-vectors.test.ts  hash.test.ts  integers.test.ts  jcs.test.ts  mcp.test.ts  merkle.test.ts  strings.test.ts
canonical/vectors/: golden.json
docs/draft/: cal-co-signature-envelope-draft.md  cal-execution-spec-v0.1.0-draft.md  changelog-v0.10.0-draft.md  dsl-spec-v0.1.0-draft.md  tc-v2-sig-verify-v1-draft.md
docs/notes/: ANALYSIS.md  LINKS.md  a1-soak-charter.md  a1-soak-runbook.md  a2-distributed-observers-charter.md  cal-gas-design.md  cal-reducer-design.md  cal-skeleton-design.md  cal-to-w5-mapping-review.md  cal-validator-design.md  gate2-baseline-results.md  gate2-benchmark-plan.md  genesis-b-gate.md  github-release-v1.0.0.md  interoperability-matrix.md  j1-jetton-publication-charter.md  layer2-toolchain-charter.md  layer3-charter.md  m2-charter.md  m3-charter.md  operational-validation-track.md  orchestrator-design.md  pfc1-status-review.md  pfc2-1-send-jetton-semantics.md  pfc2-charter.md  pfc2-consensus-freeze-draft.md  pfc2-jetton-reclassification.md  pfc2-m1-multisig-semantics.md  pfc2-multisig-charter.md  pfc3-charter.md  pfc3a-charter.md  post-freeze-roadmap.md  pp2-envelope-review.md  pp3-b-gate.md  pp4-b-gate.md  pp4-multisig-proof.md  pp5-b-gate.md  pp5-nft-proof.md  pr1-charter.md  pr1-closure-report.md  (+29 more)
docs/proofs/: README.md  proof-package-1-dryrun.json  proof-package-1.json
docs/spec/: cal-co-signature-envelope.md  canonical-encoding-v1.3.md  (+6 more)
dsl/: .gitignore  README.md  package.json
dsl-go/: ast.go  emergency.go  errors.go  evaluate.go  go.mod  hash.go  parity_test.go  parse.go  taxonomy.go  values.go
dsl-rs/: Cargo.toml
dsl-rs/src/: ast.rs  emergency.rs  errors.rs  evaluate.rs  hash.rs  i256.rs  lib.rs  parse.rs  taxonomy.rs  values.rs
dsl-rs/tests/: parity.rs
fuzz/: .gitignore  ccc_sweep.mjs  driver.mjs  nfc_sweep.mjs  ts_harness.mjs
genesisb/: index.html  manifest.json
interop/: README.md  tc-v2-commit-reconstruct.mjs  ton-proof-verify.mjs  verify-tonproof-capture.mjs
m2-registry/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
orchestrator/: .gitignore  README.md  package.json
orchestrator-go/: .gitignore  go.mod  ingress.go  ingress_test.go  node.go  parity_test.go
orchestrator-rs/: Cargo.toml
orchestrator-rs/.cargo/: config.toml
orchestrator-rs/src/: lib.rs  node.rs
orchestrator-rs/tests/: parity.rs
pp2/: .gitignore  README.md  package.json
pp4b/: README.md  manifest.json
pp5b/: manifest.json
promt/: CAL Execution Specification v0.1.0-draft.md  CHANGELOG v0.10.0-draft.md  Canonical Encoding Specification v1.3 (SCF)  Constraint DSL Specification v1.1  DSL Specification v0.1.0-draft.md  Конституции v0.9.5
scripts/: repro.sh  setup.sh
tc-v2-verify-go/: README.md  go.mod  sign_data.go  ton_proof.go  vectors_test.go  verify.go
tc-v2-verify-rs/: Cargo.toml  README.md
tc-v2-verify-rs/src/: lib.rs  sha256.rs  sign_data.rs  ton_proof.rs  util.rs
tc-v2-verify-rs/tests/: digest_parity.rs
tolk/: package-lock.json  package.json
tools/: gen_assigned.mjs
validator/: .gitignore  README.md  package.json  tsconfig.json
validator-rs/: Cargo.toml
validator-rs/src/: lib.rs  trace.rs  validate.rs
validator-rs/tests/: parity.rs
(+240 files in other folders)
